--- a/style.css
+++ b/style.css
@@ -6,260 +6,293 @@
 
 /* Common style */
 
-	html,
-	body,
-	div,
-	span,
-	h1,
-	h2,
-	h3,
-	p,
-	a,
-	address,
-	code,
-	del,
-	dfn,
-	em,
-	img,
-	strong,
-	dl,
-	dt,
-	dd,
-	ol,
-	ul,
-	li,
-	fieldset,
-	form,
-	label,
-	legend,
-	table,
-	caption,
-	tbody,
-	tfoot,
-	thead,
-	tr,
-	th,
-	td {
-		margin: 0;
-		padding: 0;
-		box-sizing: border-box;
-	}
+html,
+body,
+div,
+span,
+h1,
+h2,
+h3,
+p,
+a,
+address,
+code,
+del,
+dfn,
+em,
+img,
+strong,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-	body {
-		background-color: #ffffff;
-		color: #000000;
-		line-height: 1.6;
-		font-size: 100%;
-		font-family: "メイリオ",Meiryo,"ＭＳ Ｐゴシック","Hiragino Kaku Gothic Pro","ヒラギノ角ゴ Pro W3","Trebuchet MS",Arial,Helvetica,sans-serif;
-	}
+body {
+  background-color: #ffffff;
+  color: #000000;
+  line-height: 1.6;
+  font-size: 100%;
+  font-family: "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "Trebuchet MS", Arial, Helvetica, sans-serif;
+}
 
-	p {
-		margin-bottom: 10px;
-	}
+p {
+  margin-bottom: 10px;
+}
 
-	a:link,
-	a:visited {
-		color: #000000;
-	}
+a:link,
+a:visited {
+  color: #000000;
+}
 
-	a:hover,
-	a:focus {
-		background: #54b032;
-		color: #ffffff;
-	}
+a:hover,
+a:focus {
+  background: #54b032;
+  color: #ffffff;
+}
 
-	input,
-	textarea {
-		display: block;
-		width: 50%;
-		margin-bottom: 27px;
-		padding: 6px;
-		border: 1px solid #000000;
-	}
+input,
+textarea {
+  display: block;
+  width: 50%;
+  margin-bottom: 27px;
+  padding: 6px;
+  border: 1px solid #000000;
+}
 
-	input[type="radio"] {
-		display: inline;
-		width: auto;
-		margin-right: 10px;
-	}
+input[type="radio"] {
+  display: inline;
+  width: auto;
+  margin-right: 10px;
+}
 
-	input[type="submit"] {
-		width: auto;
-		margin: 0 auto;
-		letter-spacing: 5px;
-		cursor: pointer;
-	}
+input[type="submit"] {
+  width: auto;
+  margin: 0 auto;
+  letter-spacing: 5px;
+  cursor: pointer;
+}
 
-	input:focus,
-	textarea:focus {
-		border: 1px solid #92929a;
-		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06) inset, 0 0 8px rgba(146, 146, 154, 0.6);
-	}
+input:focus,
+textarea:focus {
+  border: 1px solid #92929a;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06) inset, 0 0 8px rgba(146, 146, 154, 0.6);
+}
 
-	ul li {
-		display: inline-block;
-		list-style: none;
-	}
+ul li {
+  display: inline-block;
+  list-style: none;
+}
 
-	img {
-		max-width: 100%;
-		height: auto;
-		vertical-align: top;
-	}
+img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: top;
+}
 
-	h1 {
-		margin-bottom: 40px;
-	}
+h1 {
+  margin-bottom: 40px;
+}
 
-	h2 {
-		display: inline-block;
-		margin: 0 auto 38px;
-		padding: 0 4% 17px;
-		background: #ffffff url("img/underline.gif") repeat-x left bottom;
-		font-size: 320%;
-		font-weight: 100;
-		text-align: center;
-		letter-spacing: 5px;
-	}
+h2 {
+  display: inline-block;
+  margin: 0 auto 38px;
+  padding: 0 4% 17px;
+  background: #ffffff url("img/underline.gif") repeat-x left bottom;
+  font-size: 320%;
+  font-weight: 100;
+  text-align: center;
+  letter-spacing: 5px;
+}
 
-	h3 {
-		margin-bottom: 32px;
-		font-size: 180%;
-		font-weight: normal;
-	}
+h3 {
+  margin-bottom: 32px;
+  font-size: 180%;
+  font-weight: normal;
+}
 
-	form {
-		margin: 0 auto;
-		width: 50%;
-		text-align: left;
-	}
+form {
+  margin: 0 auto;
+  width: 50%;
+  text-align: left;
+}
 
-	.btn {
-	}
+.btn {}
 
-	.btn:hover, .btn:focus {
-	}
+.btn:hover,
+.btn:focus {}
 
-	.btn:focus {
-		outline: 1px dotted #000000;
-	}
+.btn:focus {
+  outline: 1px dotted #000000;
+}
+
 
 /* Layout style */
 
-	header,
-	main,
-	aside {
-		display: block;
-		max-width: 1280px;
-		margin: 0 auto;
-		box-sizing: border-box;
-	}
+header,
+main,
+aside {
+  display: block;
+  max-width: 1280px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
 
-	footer {
-		width: 100%;
-		text-align: center;
-		box-sizing: border-box;
-	}
+footer {
+  width: 100%;
+  text-align: center;
+  box-sizing: border-box;
+}
 
-	section {
-		clear: both;
-		width: 100%;
-		margin-top: 74px;
-		padding-bottom: 133px;
-		background: url("img/bg_line.png") repeat-x left bottom;
-		text-align: center;
-		box-sizing: border-box;
-	}
+section {
+  clear: both;
+  width: 100%;
+  margin-top: 74px;
+  padding-bottom: 133px;
+  background: url("img/bg_line.png") repeat-x left bottom;
+  text-align: center;
+  box-sizing: border-box;
+}
 
-	section:last-child {
-		padding-bottom: 243px;
-		background: none;
-	}
+section:last-child {
+  padding-bottom: 243px;
+  background: none;
+}
+
 
 /* for max-width 768px */
 
-	@media only screen and (max-width: 768px) {
-		section {
-			padding-right: 10%;
-			padding-left: 10%;
-		}
-	}
+@media only screen and (max-width: 768px) {
+  section {
+    padding-right: 10%;
+    padding-left: 10%;
+  }
+}
 
-	#about p{
-		margin-bottom: 30px;
-		margin-left: auto;
-		margin-right: auto;
-		width: 620px;
-		text-align: left;
-		line-height: 1.8;
-	}
+#about p {
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 620px;
+  text-align: left;
+  line-height: 1.8;
+}
 
-	#about p.conspicuous{
-		width: auto;
-		margin-bottom: 45px;
-		font-size: 200%;
-		text-align: center;
-		line-height: 1.6;
-	}
+#about p.conspicuous {
+  width: auto;
+  margin-bottom: 45px;
+  font-size: 200%;
+  text-align: center;
+  line-height: 1.6;
+}
 
-	#inquiry p{
-		line-height: 1.8;
-	}
+#inquiry p {
+  line-height: 1.8;
+}
 
-	form{
-		margin-top: 90px;
-	}
+form {
+  margin-top: 90px;
+}
 
-	label{
-		display: block;
-		margin-bottom: 10px;
-	}
-	label span {
-		padding: 3px 10px;
-		border-radius: 7px;
-		background-color: #000;
-		color: #fff;
-	}
-	input{
-		width: 330px;
-	}
-	input#address{
-		width: 650px;
-	}
-	input:focus{
-		box-shadow: 0px 0px 16px #8EA5DB;
-		border-color: #92929d;
-	}
-	.radio_btn label {
-		display: inline-block;
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+label span {
+  padding: 3px 10px;
+  border-radius: 7px;
+  background-color: #000;
+  color: #fff;
+}
+
+input {
+  width: 330px;
+}
+
+input#address {
+  width: 650px;
+}
+
+input:focus {
+  box-shadow: 0px 0px 16px #8EA5DB;
+  border-color: #92929d;
+}
+
+.radio_btn label {
+  display: inline-block;
+}
+
+.radio_btn li {
+  margin-right: 50px;
+}
+
+textarea {
+  width: 650px;
+  height: 130px;
+}
+
+aside ul {
+  text-align: center;
+}
+
+aside ul li {
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+aside ul li a:hover,
+aside ul li a:focus {
+  opacity: 0.7;
+}
+
+footer {
+  margin-top: 22px;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  padding: 5px;
+  line-height: 1;
+}
+
+@media only screen and (max-width: 768px) {
+  #about p {
+    width: auto;
+  }
+  #about p.conspicuous br {
+    display: none;
+  }
+  form{
+  	width: 100%;
+  }
+	input,
+	input#address {
+	  width: 100%;
 	}
 	.radio_btn li {
-		margin-right: 50px;
+	  display: block;
 	}
-	textarea {
-		width: 650px;
-		height: 130px;
+	.radio_btn input {
+	   margin-bottom: 15px;
 	}
-
-	aside ul{
-		text-align: center;
+	.radio_btn li:last-child {
+	   margin-bottom: 12px;
 	}
-
-	aside ul li{
-		margin-left: 8px;
-		margin-right: 8px;
-	}
-
-	aside ul li a:hover,
-	aside ul li a:focus{
-		opacity: 0.7;
-	}
-
-	footer{
-		background-color: #000;
-		color: #fff;
-		text-align: center;
-		padding: 5px;
-		line-height: 1;
-		margin-top: 22px;
-	}
+}
