--- a/style.css
+++ b/style.css
@@ -187,10 +187,10 @@ section:last-child {
 }
 
 #about p {
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
   width: 620px;
+  margin-left: auto;
+  margin-bottom: 30px;
+  margin-right: auto;
   text-align: left;
   line-height: 1.8;
 }
@@ -283,7 +283,8 @@ footer {
   	width: 100%;
   }
 	input,
-	input#address {
+	input#address,
+	textarea {
 	  width: 100%;
 	}
 	.radio_btn li {
