--- a/style.css
+++ b/style.css
@@ -232,7 +232,8 @@ input#address {
   width: 650px;
 }
 
-input:focus {
+input:focus,
+textarea:focus {
   border-color: #92929d;
   box-shadow: 0px 0px 16px #8EA5DB;
 }
